k8s-dev/frontend-ds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: proshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adarshjain428/proshopfrontend:v3
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: proshop
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
